# AeroMusicSeparator

./: .gitignore  .gitmodules  COMPLIANCE.md  README.en.md  README.md
.github/workflows/: full-build.yml  test-ci.yml
aero_music_separator/: README.md  pubspec.yaml
aero_music_separator/android/app/: build.gradle.kts
aero_music_separator/android/app/src/main/: AndroidManifest.xml
aero_music_separator/android/app/src/main/cpp/: CMakeLists.txt
aero_music_separator/android/app/src/main/kotlin/com/cmzj/aero_music_separator/: MainActivity.kt
aero_music_separator/android/app/src/main/kotlin/com/example/aero_music_separator/: MainActivity.kt
aero_music_separator/android/app/src/main/res/values/: strings.xml
aero_music_separator/integration_test/: native_pipeline_test.dart
aero_music_separator/ios/: Podfile
aero_music_separator/ios/Runner/: AppDelegate.swift  Info.plist
aero_music_separator/ios/Runner.xcodeproj/: project.pbxproj
aero_music_separator/lib/: main.dart
aero_music_separator/lib/core/audio/: preview_models.dart  preview_player.dart
aero_music_separator/lib/core/ffi/: ams_bindings.dart  ams_native.dart
aero_music_separator/lib/core/licenses/: third_party_licenses.dart
aero_music_separator/lib/core/platform/: file_access_service.dart  mobile_export_channel.dart
aero_music_separator/lib/core/runtime/: openmp_runtime_configurator.dart
aero_music_separator/lib/core/separation/: export_file_service.dart  input_prepare_service.dart  model_defaults_service.dart  result_cache_manager.dart  separation_models.dart  separation_service.dart
aero_music_separator/lib/core/settings/: app_settings_store.dart  openmp_preset.dart
aero_music_separator/lib/core/storage/: managed_file_store.dart
aero_music_separator/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
aero_music_separator/lib/ui/inference/: inference_page.dart
aero_music_separator/lib/ui/settings/: about_page.dart  settings_page.dart
aero_music_separator/lib/ui/shell/: app_shell.dart
aero_music_separator/linux/: CMakeLists.txt
aero_music_separator/linux/runner/: my_application.cc
aero_music_separator/macos/Flutter/: GeneratedPluginRegistrant.swift
aero_music_separator/macos/Runner.xcodeproj/: project.pbxproj
aero_music_separator/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
aero_music_separator/macos/Runner/Configs/: AppInfo.xcconfig
aero_music_separator/native/: CMakeLists.txt  README.md
aero_music_separator/native/include/: ams_ffi.h
aero_music_separator/native/ios/AeroSeparatorFFI/: AeroSeparatorFFI.podspec  AmsFfiKeepAlive.m  README.md
aero_music_separator/native/src/: ams_ffi.cpp  engine_manager.cpp  engine_manager.h  error_store.cpp  error_store.h  ffmpeg_decode_resample.cpp  ffmpeg_decode_resample.h  ffmpeg_encode.cpp  ffmpeg_encode.h  job_manager.cpp  job_manager.h  json_result.cpp  json_result.h  prepare_manager.cpp  prepare_manager.h
aero_music_separator/native/tools/: ci_download_gguf.py  ffi_pipeline_integration.py  ffi_prepare_smoke.py
aero_music_separator/native/tools/apple/: build_ios_ffi_xcframework.sh  build_macos_native.sh  package_macos_runtime.sh
aero_music_separator/native/tools/compliance/: generate_bundle.py
aero_music_separator/native/tools/ffmpeg/: build_android.sh  build_common.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.ps1  build_windows_msys.sh  features.env  package_manifest.py  verify_manifest_license.py
aero_music_separator/native/tools/release/: AeroMusicSeparator.desktop  package_android_release.sh  package_ios_release.sh  package_linux_appimage.sh  package_macos_release.sh  package_windows_release.ps1  prepare_release_metadata.py
aero_music_separator/test/: app_settings_store_test.dart  export_file_service_test.dart  input_prepare_service_test.dart  managed_file_store_test.dart  openmp_runtime_configurator_test.dart  result_cache_manager_test.dart  separation_service_test.dart  widget_test.dart
aero_music_separator/web/: index.html  manifest.json
aero_music_separator/windows/: CMakeLists.txt
aero_music_separator/windows/runner/: Runner.rc  main.cpp
